Fix sale Order Budnle Product Alignment issue- 19501

--- a/app/design/adminhtml/Magento/backend/web/css/source/forms/_fields.less
+++ b/app/design/adminhtml/Magento/backend/web/css/source/forms/_fields.less
@@ -122,6 +122,7 @@
 
         > .admin__field-control {
             #mix-grid .column(@field-control-grid__column, @field-grid__columns);
+            padding-top: 7px;
         }
 
         > .admin__field-label {
@@ -147,6 +148,11 @@
                     margin-top: -@indent__l;
                 }
             }
+        }
+    }
+    &.composite-bundle{
+        .admin__field-option{
+            padding-top: 0;
         }
     }
 }
